Added a workaround for a bug in Gnome's shadow generation when using border image styles.

--- a/gnome-shell/Stylus/Dash.styl
+++ b/gnome-shell/Stylus/Dash.styl
@@ -13,9 +13,9 @@
 /* Governs the tooltip windows that popup when hovering over a dash icon. */
 .dash-label
     background-color:               MenuColor;
-    border-image:                   url("Stylus/Icons/Menu.svg") 16;
+    border-bevel:                   2px outset lighten(MenuColor, 5%);
     border-radius:                  0.5em;
-    box-shadow:                     1px 1px 1px shadow-color(normal, semifaded);
+    box-shadow:                     1px 1px 3px shadow-color(dark, normal);
     padding:                        0.75em 1em;
 
 /* Governs the array of icons in the main application menu. */
