--- a/gnome-shell/Stylus/Menus.styl
+++ b/gnome-shell/Stylus/Menus.styl
@@ -11,10 +11,10 @@
             padding:                4px 2px;
 
     .popup-menu-content
-        border-image:               url("Stylus/Icons/Menu.svg") 16;
         background-color:           MenuColor;
+        border-bevel:               1px outset lighten(MenuColor, 5%);
         border-radius:              0.5em;
-        box-shadow:                 1px 1px 3px shadow-color(normal, semifaded);
+        box-shadow:                 1px 1px 3px shadow-color(dark, normal);
         padding:                    4px;
 
     .popup-menu-item
