--- a/gnome-shell/Stylus/Switcher.styl
+++ b/gnome-shell/Stylus/Switcher.styl
@@ -6,8 +6,8 @@
 .switcher-list
 
     background-color:                   MenuColor;
+    border-bevel:                       1px outset lighten(MenuColor, 5%);
     border-radius:                      0.5em;
-    border-image:                       url("Stylus/Icons/Menu.svg") 16;
     box-shadow:                         1px 2px 3px shadow-color(normal, semifaded);
 
     .item-box,
