Added the 'Color-Standards' repository as a submodule of this one.

--- a/Standards/Colors/Text.styl
+++ b/Standards/Colors/Text.styl
@@ -7,7 +7,7 @@
 
 
 /** GENERAL TEXT COLORS **/
-TextColor                   = LightSilver;
+TextColor                   = Silver;
 TextColorDim                = DarkSilver;
 TextColorDimmer             = VeryDarkSilver;
 TextColorDisabled           = LightGray;
