--- a/Standards/Colors/UI.styl
+++ b/Standards/Colors/UI.styl
@@ -33,7 +33,6 @@ GlossColorLight                     = alpha(Silver, 0.125);
 GlossColorLighter                   = alpha(White, 0.125);
 
 HighlightColor                      = Silver;
-HighlightColorDim                   = alpha(Silver, 0.625);
 HighlightTextColor                  = DarkGray;
 
 IconColor                           = Orchid;
@@ -46,7 +45,7 @@ LinkColor                           = SpringGreen;
 
 MenuColor                           = VeryDarkGray;
 MenuBorderColor                     = DarkWhite;
-MenuTextColor                       = TextColor;
+MenuTextColor                       = TextColorLight;
 MenuAcceleratorColor                = TextColorDim;
 MenuTextColorDisabled               = LightGray;
 
@@ -57,14 +56,10 @@ OutsetColor                         = VeryDarkGray;
 ProgressBarColor                    = VibrantBlue;
 ProgressBarColorDim                 = Silver;
 
-RubberBandColor                     = alpha(Silver, 0.25);
-RubberBandBorderColor               = SkyBlue;
-
 ScrollbarColor                      = VibrantBlue;
 ScrollbarColorDim                   = WindowColorLight;
 
 SelectionColor                      = VibrantBlue;
-SelectionColorBackground            = Silver;
 SelectionTextColor                  = TextColorSelected;
 
 ShadowColorDarker                   = alpha(Black, 0.75);
