--- a/gtk-3.0/Stylus/Cells.styl
+++ b/gtk-3.0/Stylus/Cells.styl
@@ -19,10 +19,9 @@ row
     image
         color:                  SelectionColor;
     &:selected
-        // background-color:       SelectionColor;
         background-color:       HighlightColor;
-        color:                  TextColorSelected;
-        image, label            { color: TextColorSelected; }
+        color:                  TextColorHighlighted;
+        image, label            { color: TextColorHighlighted; }
 
         &:backdrop
             background-color:   HighlightColorDim;
