--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -49,7 +49,7 @@
   border: 0px solid #00c8ff;
   border-bottom-width: 1px;
   border-radius: 0px;
-  color: #bbb;
+  color: #a2a2a2;
   font-weight: bold;
   margin: 0px;
 }
@@ -89,7 +89,6 @@
   background-image: none;
   border: none;
   box-shadow: none;
-  text-shadow: none;
 }
 .popup-menu.panel-menu {
   -boxpointer-gap: 2px;
@@ -109,7 +108,7 @@
   padding: 4px;
 }
 .popup-menu .popup-menu-item {
-  color: #bbb;
+  color: #a2a2a2;
 }
 .popup-menu .popup-menu-item:active,
 .popup-menu .popup-menu-item:checked {
@@ -345,7 +344,7 @@
   background-color: rgba(24,24,24,0.25);
   box-shadow: inset 0.5px 1px 2px rgba(0,0,0,0.5);
   background-color: #646464;
-  color: #bbb;
+  color: #a2a2a2;
 }
 .switcher-list .item-box StIcon,
 .switcher-list .thumbnail-box StIcon {
