--- a/gnome-shell/Stylus/Notifications.styl
+++ b/gnome-shell/Stylus/Notifications.styl
@@ -1,6 +1,9 @@
 
 .message-list
 
+    border:                         0px solid darken(MenuColor, 25%);
+    border-right-width:             1px;
+
     .message
         border-radius:              0.125em;
         border:                     1px solid transparent;
@@ -48,9 +51,9 @@
 .notification-banner,
 .osd-window
     background-color:               MenuColor;
-    border-bevel:                   1px outset lighten(MenuColor, 5%);
+    border-bevel:                   2px outset lighten(MenuColor, 5%);
     border-radius:                  0.5em;
-    box-shadow:                     1px 1px 8px shadow-color(dark, normal);
+    box-shadow:                     2px 2px 4px shadow-color(dark, normal);
 
 .modal-dialog
     background-color:               WindowColor;
