--- a/gtk-3.0/Stylus/Containers.styl
+++ b/gtk-3.0/Stylus/Containers.styl
@@ -26,8 +26,6 @@ window
         .titlebar,
         headerbar
             background-color:   transparent;
-            button.titlebutton
-                padding:        0.25em 0em;
 
         > decoration            { background-color: WindowColor; }
         > decoration:backdrop   { background-color: WindowColorDim; }
@@ -73,8 +71,7 @@ decoration
         padding:                0px;
 
 /* RUBBERBAND - Controls the scalable rectangle drawn when selecting multiple icons using the mouse. */
-.rubberband,
-rubberband
+.rubberband
     background-color:           alpha(RubberBandColor, 0.25);
     border:                     1px solid RubberBandBorderColor;
 
