--- a/gtk-3.0/Stylus/Menus.styl
+++ b/gtk-3.0/Stylus/Menus.styl
@@ -17,7 +17,7 @@ popover modelbutton
             color:                  MenuAcceleratorColor;
 
     &:hover
-        background-image:           SelectionGradientVertical;
+        background-color:           HighlightColor;
         > label,
         > label > accelerator
             color:                  TextColorSelected;
